added liquebase and realize some query

--- a/deal-db/pom.xml
+++ b/deal-db/pom.xml
@@ -12,8 +12,55 @@
     <artifactId>deal-db</artifactId>
 
     <properties>
+        <!-- liquibase -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <liquibase-plugin.version>3.6.1</liquibase-plugin.version>
+        <liquibase.changelog>db.changelog-master.xml</liquibase.changelog>
+        <liquibase.host>localhost</liquibase.host>
+        <liquibase.port>5432</liquibase.port>
+        <liquibase.db>postgres</liquibase.db>
+        <liquibase.schema>deal</liquibase.schema>
+        <liquibase.user>postgres</liquibase.user>
+        <liquibase.password>password</liquibase.password>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyyMMdd-HHmmssSSS</maven.build.timestamp.format>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>${liquibase-plugin.version}</version>
+                <configuration>
+                    <outputFileEncoding>UTF-8</outputFileEncoding>
+                    <driver>org.postgresql.Driver</driver>
+                    <url>
+                        jdbc:postgresql://localhost:5432/postgres?currentSchema=deal
+                    </url>
+                    <username>postgres</username>
+                    <password>password</password>
+                    <changeLogFile>db.changelog-master.xml</changeLogFile>
+                    <changelogSchemaName>deal</changelogSchemaName>
+                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
