--- a/deal-srv/src/main/resources/application.yml
+++ b/deal-srv/src/main/resources/application.yml
@@ -1,6 +1,22 @@
+server:
+  port: 8888
+
 spring:
   application:
     name: deal
+
+kafka:
+  enabled: true
+  bootstrapAddress: localhost:9092
+  producer:
+    id: producerServer
+  consumer:
+    id: consumerServer
+  group:
+    id: server.broadcast
+  topic:
+    to_analytic: to_analytic
+    to-executor: to_executor
 
 spring.datasource.driver-class-name: org.postgresql.Driver
 spring.datasource.url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deal?createDatabaseIfNotExist=true
