added second topic

--- a/deal-srv/src/main/resources/application.yml
+++ b/deal-srv/src/main/resources/application.yml
@@ -16,7 +16,7 @@ kafka:
     id: server.broadcast
   topic:
     to_analytic: to_analytic
-    to-executor: to_executor
+    to_bank: to_bank
 
 spring.datasource.driver-class-name: org.postgresql.Driver
 spring.datasource.url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deal?createDatabaseIfNotExist=true
